--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -5,7 +5,7 @@ html, body {
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: Avenir, Helvetica, Arial, sans-serif;
+  font-family: Roboto,arial,sans-serif;
   font-size: 13px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
